[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/img/game_2/sprite_ennemi_marche_32x32.png" type="Texture" id=1]
[ext_resource path="res://game_2_Enemi.gd" type="Script" id=2]


[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 10 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 11.7258, 5.97528 )

[sub_resource type="RectangleShape2D" id=11]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 17.9691, 10 )

[node name="Enemi" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )

[node name="Contact corps" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="Tete" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tete"]
position = Vector2( -0.297302, -13.6759 )
shape = SubResource( 10 )

[node name="Pieds" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pieds"]
position = Vector2( -0.297302, 9.81096 )
shape = SubResource( 11 )

[node name="Corps" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Corps"]
position = Vector2( -0.297302, 5.05413 )
shape = SubResource( 12 )
[connection signal="body_entered" from="Tete" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Pieds" to="." method="_on_Pieds_body_entered"]
[connection signal="body_entered" from="Corps" to="." method="_on_Corps_body_entered"]
